ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/TypeArgumentLists/TypeArgumentList1/input.ts.stderr
error: Expected unicode escape
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/TypeArgumentLists/TypeArgumentList1/input.ts:1:9
  |
1 | Foo<A,B,\ C>(4, 5, 6);
  |         ^

